--- a/coffee/templates/coffee/acidity.html
+++ b/coffee/templates/coffee/acidity.html
@@ -1,5 +1,5 @@
-{% extends "/Users/portermorgan/Documents/Python/food_blog/coffee/templates/coffee/index.html" %}
+{% extends "/Users/portermorgan/Documents/Python/food_blog/coffee/templates/coffee/filters.html" %}
 
 {% block page_title %}
-    <h2> {{ acidity }} acid coffes </h2>
+    <h1> {{ acidity }}-acidity coffes </h1>
 {% endblock page_title %}
