--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -3,7 +3,7 @@
 {% extends "base.html" %}
 
 {% block page_title %}
-    <h1 style="margin-left:3vw"> all recipe posts </h1>
+    <h1 style="margin-left:3vw"> all recipes </h1>
 {% endblock page_title %}
 
 <!-- If you edit the below code, you will need to make the same edits in search.html in the food_blog directory -->
