--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>  the salt lick  </title>
+    <title>  lemonhead  </title>
     
     <!-- can include a java script here -->
 </head>
@@ -24,7 +24,7 @@
         </form>
     </div>
 
-    <h1 class="site-title"> the salt lick </h1>
+    <h1 class="site-title"> lemonhead </h1>
     <nav class="header-links">
         <a href="{% url 'posts:post_index' %}" class = "header-link">food</a>
         <a href="{% url 'coffee:coffee_index' %}" class = "header-link">coffee</a>
