changed paths for tags and such

--- a/coffee/templates/coffee/origin.html
+++ b/coffee/templates/coffee/origin.html
@@ -1,4 +1,4 @@
-{% extends "coffee/templates/coffee/filters.html" %}
+{% extends "coffee/filters.html" %}
 
 {% block page_title %}
     <h1> Coffees from {{ origin }} </h1>
