--- a/posts/templates/posts/tag.html
+++ b/posts/templates/posts/tag.html
@@ -1,6 +1,6 @@
 <!-- posts/templates/posts/tag.html -->
 
-{% extends "posts/templates/posts/index.html" %}
+{% extends "posts/index.html" %}
 
 {% block page_title %}
     <h1> {{ tag }} </h1>
