--- a/coffee/templates/coffee/acidity.html
+++ b/coffee/templates/coffee/acidity.html
@@ -1,4 +1,4 @@
-{% extends "coffee/templates/coffee/filters.html" %}
+{% extends "coffee/filters.html" %}
 
 {% block page_title %}
     <h1> {{ acidity }}-acidity coffes </h1>
