--- a/coffee/templates/coffee/roast_level.html
+++ b/coffee/templates/coffee/roast_level.html
@@ -1,4 +1,4 @@
-{% extends "coffee/templates/coffee/filters.html" %}
+{% extends "coffee/filters.html" %}
 
 {% block page_title %}
     <h1> {{ roast_level }} roasts </h1>
