--- a/coffee/templates/coffee/roaster.html
+++ b/coffee/templates/coffee/roaster.html
@@ -1,4 +1,4 @@
-{% extends "coffee/templates/coffee/filters.html" %}
+{% extends "coffee/filters.html" %}
 
 {% block page_title %}
     <h1> Roasted by {{ roaster }} </h1>
