--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -4,7 +4,9 @@
 
 
 {% block page_title %}
-    <h1> {{ post.title }} </h1>
+    <div class="narrow-body">
+        <h1> {{ post.title }} </h1>
+    </div>
 {% endblock page_title %}
 
 {% block page_content %}
