Revert "dumb test"
This reverts commit 31a4fd63bf83dfd9a23705673eca1ba55188f333.

--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -20,6 +20,7 @@
                             src = "{{ post.banner.url }}"
                             alt = "{{ post.title }}"
                             height = "400"
+                            width = "auto"
                         />
                     </figure>
                     
