wash vs natural attribute added

--- a/coffee/templates/coffee/detail.html
+++ b/coffee/templates/coffee/detail.html
@@ -33,6 +33,11 @@
                 </p>
             {% endif %}
 
+            {% if coffee.processing %}
+                <p> <em> Processing: </em> <a href = "{% url 'coffee:processing' coffee.processing %}"> {{ coffee.processing.name }} </a>
+                </p>
+            {% endif %}
+
 
             <p>
                 <em> Cupping notes: </em>
